--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500&family=Lexend+Deca:wght@100;300;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500&family=Lexend+Deca:wght@100;300;400;500&display=swap");
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css");
 
 :root {
   --purple: #574ae8;
